// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow code generation #generateSource() __typename in an object 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ? {|
    __typename: string,
    // The name of the character
    name: string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() __typename in an operation 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroQuery = {|
|};

export type HeroFragment = {|
  hero: ? {|
    __typename: string,
    // The name of the character
    name: string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() __typename in fragment spreads, allows for disjoint union via __typename string literals 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ? {|
    ...HumanHeroFragment,
    ...DroidHeroFragment,
    __typename: string,
  |},
|};

export type DroidHeroFragment = {|
  // This droid's primary function
  primaryFunction: ?string,
|};

export type HumanHeroFragment = {|
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};"
`;

exports[`Flow code generation #generateSource() __typename in inline fragments, allows for disjoint union via __typename string literals 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ?HeroFromHeroName,
|};

export type HeroFromHeroNameOnDroid = {|
  __typename: string,
  // This droid's friends, or an empty list if they have none
  friends: ?Array< {|
    // The name of the character
    name: string,
  |} >,
|};

export type HeroFromHeroNameOnHuman = {|
  __typename: string,
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type HeroFromHeroName =
  | HeroFromHeroNameOnDroid
  | HeroFromHeroNameOnHuman;"
`;

exports[`Flow code generation #generateSource() __typename single fragment spread 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ?HumanFriendsFragment,
|};

export type HumanFriendsFragment = {|
  // The friends of the character, or an empty list if they have none
  friends: ?Array< {|
    __typename: string,
    // The name of the character
    name: string,
  |} >,
|};"
`;

exports[`Flow code generation #generateSource() should annotate custom scalars as string 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  misc: ? {|
    date: ?any,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should correctly add typename to nested fragments on interfaces if addTypename is true 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroQueryQueryVariables = {|
  episode: ?Episode,
|};

export type HeroQueryQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {|
      // A list of the friends, as a convenience when edges are not needed.
      friends: ?Array<CharacterFragmentFragment>,
    |},
  |},
|};

export type CharacterFragmentFragmentOnHuman = {|
  // What this human calls themselves
  name: string,
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type CharacterFragmentFragmentOnDroid = {|
  // What others call this droid
  name: string,
  // This droid's primary function
  primaryFunction: ?string,
|};

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid;"
`;

exports[`Flow code generation #generateSource() should correctly handle doubly nested fragments on interfaces 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroQueryQueryVariables = {|
  episode: ?Episode,
|};

export type HeroQueryQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {|
      // A list of the friends, as a convenience when edges are not needed.
      friends: ?Array<CharacterFragmentFragment>,
    |},
  |},
|};

export type CharacterFragmentFragmentOnHuman = {|
  // What this human calls themselves
  name: string,
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
  // This human's friends, or an empty list if they have none
  friends: ?Array<OtherCharacterFragmentFragment>,
|};

export type CharacterFragmentFragmentOnDroid = {|
  // What others call this droid
  name: string,
  // This droid's primary function
  primaryFunction: ?string,
|};

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid;

export type OtherCharacterFragmentFragmentOnHuman = {|
  // Height in the preferred unit, default is meters
  height: ?number,
|};

export type OtherCharacterFragmentFragmentOnDroid = {|
  // The movies this droid appears in
  appearsIn: Array< ?Episode >,
|};

export type OtherCharacterFragmentFragment =
  | OtherCharacterFragmentFragmentOnHuman
  | OtherCharacterFragmentFragmentOnDroid;"
`;

exports[`Flow code generation #generateSource() should correctly handle fragment spreads on interfaces 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroQueryQueryVariables = {|
  episode: ?Episode,
|};

export type HeroQueryQuery = {|
  hero: ? {|
    ...HumanFragmentFragment,
    ...DroidFragmentFragment,
    // The name of the character
    name: string,
  |},
|};

export type HumanFragmentFragment = {|
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type DroidFragmentFragment = {|
  // This droid's primary function
  primaryFunction: ?string,
|};"
`;

exports[`Flow code generation #generateSource() should correctly handle fragments on interfaces 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroQueryQueryVariables = {|
  episode: ?Episode,
|};

export type HeroQueryQuery = {|
  hero: ?HeroFromHeroQuery,
|};

export type HeroFromHeroQueryOnHuman = {|
  // What this human calls themselves
  name: string,
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type HeroFromHeroQueryOnDroid = {|
  // What others call this droid
  name: string,
  // This droid's primary function
  primaryFunction: ?string,
|};

export type HeroFromHeroQuery =
  | HeroFromHeroQueryOnHuman
  | HeroFromHeroQueryOnDroid;"
`;

exports[`Flow code generation #generateSource() should correctly handle nested fragments on interfaces 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroQueryQueryVariables = {|
  episode: ?Episode,
|};

export type HeroQueryQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character exposed as a connection with edges
    friendsConnection: {|
      // A list of the friends, as a convenience when edges are not needed.
      friends: ?Array<CharacterFragmentFragment>,
    |},
  |},
|};

export type CharacterFragmentFragmentOnHuman = {|
  // What this human calls themselves
  name: string,
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type CharacterFragmentFragmentOnDroid = {|
  // What others call this droid
  name: string,
  // This droid's primary function
  primaryFunction: ?string,
|};

export type CharacterFragmentFragment =
  | CharacterFragmentFragmentOnHuman
  | CharacterFragmentFragmentOnDroid;"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a multiple custom fragments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroAndFriendsNamesQueryVariables = {|
  episode: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: ?Array<{|
      ...FriendFragment,
      ...PersonFragment,
    |}>,
  |},
|};

export type FriendFragment = {|
  // The name of the character
  name: string,
|};

export type PersonFragment = {|
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a single custom fragment 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroAndFriendsNamesQueryVariables = {|
  episode: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: ?Array<FriendFragment>,
  |},
|};

export type FriendFragment = {|
  // The name of the character
  name: string,
|};"
`;

exports[`Flow code generation #generateSource() should generate fragmented query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    ...HeroFriendsFragment,
    // The name of the character
    name: string,
  |},
|};

export type HeroFriendsFragment = {|
  // The friends of the character, or an empty list if they have none
  friends: ?Array< {|
    // The name of the character
    name: string,
  |} >,
|};"
`;

exports[`Flow code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type ReviewInput = {|
  // 0-5 stars
  stars: number,
  // Comment about the movie, optional
  commentary: ?string,
  // Favorite color, optional
  favorite_color: ?ColorInput,
|};

export type ColorInput = {|
  red: number,
  green: number,
  blue: number,
|};

export type ReviewMovieMutationVariables = {|
  episode: ?Episode,
  review: ?ReviewInput,
|};

export type ReviewMovieMutation = {|
  createReview: ? {|
    // The number of stars this review gave, 1-5
    stars: number,
    // Comment about the movie
    commentary: ?string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate query operations with inline fragments 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroAndDetailsQuery = {|
  hero: ? {|
    ...HeroDetailsFragment,
    // The name of the character
    name: string,
  |},
|};

export type HeroDetailsFragmentOnDroid = {|
  // This droid's primary function
  primaryFunction: ?string,
|};

export type HeroDetailsFragmentOnHuman = {|
  // Height in the preferred unit, default is meters
  height: ?number,
|};

export type HeroDetailsFragment =
  | HeroDetailsFragmentOnDroid
  | HeroDetailsFragmentOnHuman;"
`;

exports[`Flow code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroAndFriendsNamesQueryVariables = {|
  episode: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
    // The friends of the character, or an empty list if they have none
    friends: ?Array< {|
      // The name of the character
      name: string,
    |} >,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroNameQueryVariables = {|
  episode: ?Episode,
|};

export type HeroNameQuery = {|
  hero: ? {|
    // The name of the character
    name: string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should handle complex fragments with type aliases 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    ...SomethingFragment,
    // The name of the character
    name: string,
  |},
  empireHero: ? {|
    ...SomethingFragment,
    // The name of the character
    name: string,
  |},
|};

export type SomethingFragmentOnHuman = {|
  // This human's friends, or an empty list if they have none
  friends: ?Array< ?FriendFragment >,
|};

export type FriendFragmentOnHuman = {|
  // The home planet of the human, or null if unknown
  homePlanet: ?string,
|};

export type FriendFragmentOnDroid = {|
  // This droid's primary function
  primaryFunction: ?string,
|};

export type FriendFragment =
  | FriendFragmentOnHuman
  | FriendFragmentOnDroid;

export type SomethingFragmentOnDroid = {|
  // The movies this droid appears in
  appearsIn: Array< ?Episode >,
|};

export type SomethingFragment =
  | SomethingFragmentOnHuman
  | SomethingFragmentOnDroid;"
`;

exports[`Flow code generation #generateSource() should handle multi-fragmented query operations 1`] = `
"/* @flow */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"NEWHOPE\\" | // Star Wars Episode IV: A New Hope, released in 1977.
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\"; // Star Wars Episode VI: Return of the Jedi, released in 1983.


export type HeroAndFriendsNamesQuery = {|
  hero: ? {|
    ...HeroFriendsFragment,
    ...HeroAppearsFragment,
    // The name of the character
    name: string,
  |},
|};

export type HeroFriendsFragment = {|
  // The friends of the character, or an empty list if they have none
  friends: ?Array< {|
    // The name of the character
    name: string,
  |} >,
|};

export type HeroAppearsFragment = {|
  // The movies this character appears in
  appearsIn: Array< ?Episode >,
|};"
`;
